<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.inandout.OrderActivity"
    android:columnCount="3"
    android:background="@drawable/order_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeOrder"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/doubleDouble"
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/doubleDoubleTextView"
        android:layout_column="1"
        android:layout_row="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/doubleDoubleEditText"
        android:layout_column="2"
        android:layout_row="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cheeseburger"
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_row="2"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/cheeseburgerTextView"
        android:layout_column="1"
        android:layout_row="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/cheeseburgerEditText"
        android:layout_column="2"
        android:layout_row="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frenchFries"
        android:id="@+id/textView4"
        android:layout_column="0"
        android:layout_row="3"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/frenchFriesTextView"
        android:layout_column="1"
        android:layout_row="3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/frenchFriesEditText"
        android:layout_row="3"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shakes"
        android:id="@+id/textView5"
        android:layout_row="4"
        android:layout_column="0"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/shakesTextView"
        android:layout_row="4"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/shakesEditText"
        android:layout_row="4"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fountainDrinks"
        android:id="@+id/textView6"
        android:layout_row="5"
        android:layout_column="0"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/small"
        android:id="@+id/textView7"
        android:layout_row="6"
        android:layout_column="0"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/smallDrinkTextView"
        android:layout_row="6"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/smallDrinkEditText"
        android:layout_row="6"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/medium"
        android:id="@+id/textView8"
        android:layout_row="7"
        android:layout_column="0"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/mediumDrinkTextView"
        android:layout_row="7"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mediumDrinkEditText"
        android:layout_row="7"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/large"
        android:id="@+id/textView9"
        android:layout_row="8"
        android:layout_column="0"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/largeDrinkTextView"
        android:layout_row="8"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/largeDrinkEditText"
        android:layout_row="8"
        android:layout_column="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeOrderButton"
        android:id="@+id/button"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:onClick="activateSummary" />

</GridLayout>
